--- a/src/assets/scss/argon-dashboard-react.scss
+++ b/src/assets/scss/argon-dashboard-react.scss
@@ -55,3 +55,43 @@ a.nav-link.active,
 a.nav-link {
     cursor: pointer;
 }
+
+
+/* Styles for the input */
+div.ReactTags__tagInput {
+    box-shadow: 0 1px 3px rgba(50, 50, 93, 0.15), 0 1px 0 rgba(0, 0, 0, 0.02);
+    border: 0;
+    -webkit-transition: box-shadow .15s ease;
+    transition: box-shadow .15s ease;
+}
+div.ReactTags__tagInput input.ReactTags__tagInputField,
+div.ReactTags__tagInput input.ReactTags__tagInputField:focus {
+    height: calc(2.75rem + 2px);
+    margin: 0;
+    font-size: 12px;
+    width: 100%;
+    line-height: 1.5;
+    color: #8898aa;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #cad1d7;
+    border-radius: 0.375rem;
+}
+
+/* Styles for selected tags */
+div.ReactTags__selected span.ReactTags__tag {
+    border: 1px solid #ddd;
+    background: #eee;
+    font-size: 12px;
+    display: inline-block;
+    padding: 5px;
+    margin: 0 5px;
+    cursor: move;
+    border-radius: 2px;
+}
+
+div.ReactTags__selected a.ReactTags__remove {
+    color: #aaa;
+    margin-left: 5px;
+    cursor: pointer;
+}
