remove responsive class

--- a/src/assets/scss/argon-dashboard-react.scss
+++ b/src/assets/scss/argon-dashboard-react.scss
@@ -101,3 +101,7 @@ div.ReactTags__selected a.ReactTags__remove {
     max-width: 80%;
     overflow: auto;
 }
+
+.div_workers > .table-responsive{
+    overflow: hidden;
+}
