--- a/src/assets/scss/argon-dashboard-react.scss
+++ b/src/assets/scss/argon-dashboard-react.scss
@@ -114,4 +114,9 @@ div.ReactTags__selected a.ReactTags__remove {
         overflow: auto;
     }
 
+    .dropdownButtons {
+        position: relative;
+        top: 20px
+    }
+
 }
