--- a/src/assets/scss/argon-dashboard-react.scss
+++ b/src/assets/scss/argon-dashboard-react.scss
@@ -136,10 +136,21 @@ div.ReactTags__selected a.ReactTags__remove {
     bottom: 35px;
 }
 
-@media screen and (max-width: 400px) {
+.buttonfloat-right-jobs {
+    top: -50px;
+}
 
+@media screen and (max-width: 400px) {
     .buttonfloat-right-estimates {
         right: -10px;
         bottom: 60px;
+    }
+
+}
+
+@media screen and (max-width: 1024px) {
+    .dropdown-menu .dropdown-item {
+        padding: .4rem .8rem;
+        font-size: 0.875rem;
     }
 }
