--- a/src/assets/scss/argon-dashboard-react.scss
+++ b/src/assets/scss/argon-dashboard-react.scss
@@ -169,3 +169,64 @@ div.ReactTags__selected a.ReactTags__remove {
         white-space: pre-wrap;
     }
 }
+
+//pdf-viewer
+.customViewer {
+    border-color: #fa5b35;
+    border-width: 1px;
+    border-style: solid;
+}
+.customCanvas {
+    height: 500px;
+    max-height: 500px;
+    min-width: 500px;
+    max-width: 500px;
+    overflow: auto;
+}
+.customPrevBtn {
+    cursor: pointer;
+    display: inline-block;
+    margin: 0;
+    width: auto;
+    color: #fa5b35;
+    background-color: #f3f3f3;
+    border-color: #fa5b35;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 6px;
+}
+.customNextBtn {
+    cursor: pointer;
+    display: inline-block;
+    margin: 0;
+    width: auto;
+    color: #fa5b35;
+    background-color: #f3f3f3;
+    border-color: #333333;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 6px;
+}
+.customResetBtn {
+    cursor: pointer;
+    display: inline-block;
+    margin: 0;
+    width: auto;
+    color: #45fa35;
+    background-color: #f3f3f3;
+    border-color: #45fa35;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 6px;
+}
+.customPages {
+    font-size: medium;
+    margin: 0.5rem;
+}
+.customWrapper {
+    height: 40px;
+    font-size: 24px;
+    padding: 12px;
+    padding-bottom: 0;
+    background-color: #fff;
+}
