--- a/src/assets/css/argon-dashboard-react.css
+++ b/src/assets/css/argon-dashboard-react.css
@@ -1,3 +1,19 @@
+@font-face {
+    font-family: OpenSans;
+    src: url('/fonts/OpenSans-Regular-subset.woff2') format('woff2'), url('/fonts/OpenSans-Regular-subset.woff') format('woff');
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: OpenSans;
+    src: url('/fonts/OpenSans-Bold-subset.woff2') format('woff2'), url('/fonts/OpenSans-Bold-subset.woff') format('woff');
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+}
+
 :root {
     --blue: #5e72e4;
     --indigo: #5603ad;
